tests/invalid/method_impl.err_exp
method_impl.m:022: In clause for type class method implementation:
method_impl.m:022:   in argument 2 of predicate `foo_m1/2':
method_impl.m:022:   type error: variable `HeadVar__2' has type `int',
method_impl.m:022:   expected type was `string'.
method_impl.m:025: In clause for type class method implementation:
method_impl.m:025:   error: undefined predicate `bar_m1/2'.
